@@ -1,3 +1,13 @@
+2010-08-10  Kavita Kanetkar  <kkanetkar@chromium.org>
+
+        Reviewed by Joseph Pecoraro.
+
+        Web Inspector: Support appcache status change for Chrome
+        https://bugs.webkit.org/show_bug.cgi?id=43531
+
+        * src/ApplicationCacheHost.cpp:
+        (WebCore::ApplicationCacheHost::notifyDOMApplicationCache):
+
 2010-08-10  Kenneth Russell  <kbr@google.com>
 
         Reviewed by Dimitri Glazkov.
